syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

import "google/protobuf/timestamp.proto";

option go_package = "gitlab.figo.systems/platform/monoskope/monoskope/pkg/api/domain/projections";

package projections;

// User within Monoskope
message User {
  // Unique identifier of the user (UUID 128-bit number)
  string id = 1;
  // Name of the user
  string name = 2;
  // Email address of the user
  string email = 3;
  // Roles of the user
  repeated UserRoleBinding roles = 4;
  // When it has been created
  google.protobuf.Timestamp Created = 5;
  // By whom it has been created
  string CreatedById = 6;
  // When it has been last modified
  google.protobuf.Timestamp LastModified = 7;
  // By whom it has been last modified
  string LastModifiedById = 8;
  // When it has been deleted
  google.protobuf.Timestamp Deleted = 9;
  // By whom it has been deleted
  User DeletedBy = 10;
}

message UserRoleBinding {
  // Unique identifier of the user role binding (UUID 128-bit number)
  string id = 1;
  // Unique identifier of the user (UUID 128-bit number)
  string user_id = 2;
  // Name of the role
  string role = 3;
  // Scope of the role
  string scope = 4;
  // Target resource of the role
  string resource = 5;
  // When it has been created
  google.protobuf.Timestamp Created = 6;
  // By whom it has been created
  string CreatedById = 7;
  // When it has been last modified
  google.protobuf.Timestamp LastModified = 8;
  // By whom it has been last modified
  string LastModifiedById = 9;
  // When it has been deleted
  google.protobuf.Timestamp Deleted = 10;
  // By whom it has been deleted
  User DeletedBy = 11;
}